-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.3.0
-
None
-
3
-
4404
number of CPU partitions of libcfs is explicitly set to 1 which means most SMP features are disabled by default, the reason we didn't enable it so far is because enabling it will break some tests because change of /proc interfaces or modparameters.
We need to fix testing scripts and enable auto-probing CPT by setting default value of "libcfs cpu_npartitions=0"