libcfs/libcfs/linux/linux-cpu.c
@@ -46,9 +46,7 @@
  *  1 : disable multiple partitions
  * >1 : specify number of partitions
  */
-/* NB: we set it to 1 for now, multiple partitions will be enabled after
- * all smp node affinity code landed */
-static int	cpu_npartitions = 1;
+static int	cpu_npartitions;
 CFS_MODULE_PARM(cpu_npartitions, "i", int, 0444, "# of CPU partitions");
 
 /**
